Apr 25, 2023
  human phenotype ontology: removed no longer used code

Apr 21, 2023
  human phenotype ontology: NEW FORMAT (genes_to_phenotype.txt) -- they dropped last five columns from the source file
     * ncbi_gene_id [tab] gene_symbol [tab] hpo_id [tab] hpo_name
     * 10      NAT2    HP:0000007      Autosomal recessive inheritance

Jan 13, 2023
  updated build.gradle to be gradle 6.x + compatible

Oct 03, 2022
 fixed logging of dates

Jan 05, 2022
 updated log4j to avoid zero day exploit

May 13, 2021
 - MP annotator: tuned up summary logging

Mar 05, 2021
 - human phenotype ontology: changed the source to http://purl.obolibrary.org/obo/hp/hpoa/genes_to_phenotype.txt

Oct 02, 2020
 - source file change: MGI separates multiple values by '|', instead of ','

May 18, 2020
 - source file change, per RGDD-1776
   NEW FORMAT (genes_to_phenotype.txt)
     #Format: entrez-gene-id [tab] entrez-gene-symbol [tab] HPO-Term-ID [tab] HPO-Term-Name [tab] Frequency-Raw [tab] Frequency-HPO [tab] Additional Info from G-D source [tab] G-D source<tab>disease-ID for link
     2	A2M	HP:0001300	Parkinsonism			susceptibility	mim2gene	OMIM:104300

Mar 9, 2020
 - refactored annotations qc and load code, for better performance and accurate summary counts

Mar 4, 2020
 - source file change: different field order
   NEW FORMAT (phenotypes_to_gene.txt)
     #Format: HPO-id [tab] HPO label [tab] entrez-gene-id [tab] entrez-gene-symbol [tab] Additional Info from G-D source [tab] G-D source [tab] disease-ID for link
     HP:0000002	Abnormality of body height	3954	LETM1	-	mim2gene	OMIM:194190
   OLD FORMAT
     #Format: diseaseId [tab] gene-symbol [tab] gene-id [tab] HPO-ID [tab] HPO-term-name
     OMIM:302800	GJB1	2705	HP:0002015	Dysphagia

May 2, 2019 - v.1.6.6
 - tuned up summary emails
 - simplified logic for MGI pehnotype pipeline

Feb 15, 2019 - v.1.6.5
 - updated dependencies

Dec 19, 2018 - v.1.6.3
 - updated dependencies and build.gradle

May 21, 2018 - v.1.6.2